syntax = "proto3";
import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";
import "ft.enums.proto";

option csharp_namespace = "Fibertest30.Api";
package fibertest30.events.data;

message DateTimeRange {
  google.protobuf.Timestamp start = 1;
  google.protobuf.Timestamp end = 2;
}

message DateTimeFilter {
  DateTimeRange searchWindow = 1;
  google.protobuf.Duration relativeFromNow = 2;
  google.protobuf.Timestamp loadSince = 3;
  bool orderDescending = 4;
}

message OpticalEvent {
	int32 eventId = 1;
	google.protobuf.Timestamp measuredAt = 2;
	google.protobuf.Timestamp registeredAt = 3;

	string rtuTitle = 4;
	string rtuId = 5;
	string traceTitle = 6;
	string traceId = 7;

	ft.enums.BaseRefType baseRefType = 8;
	ft.enums.FiberState traceState = 9;

	ft.enums.EventStatus eventStatus = 10;
	google.protobuf.Timestamp statusChangedAt = 11;
	string statusChangedByUser = 12;

	string comment = 13;
}

message NetworkEvent {
	int32 eventId = 1;
	google.protobuf.Timestamp registeredAt = 2;

	string rtuId = 3;
	string rtuTitle = 4;

	bool isRtuAvailable = 5;
	ft.enums.ChannelEvent onMainChannel = 6;
	ft.enums.ChannelEvent onReserveChannel = 7;
}

message BopEvent {
	int32 eventId = 1;
	google.protobuf.Timestamp registeredAt = 2;

	string bopAddress = 3;
	string rtuId = 4;
	string rtuTitle = 5;
	string serial = 6;
	bool isBopOk = 7;
}

message RtuAccident {
	int32 id = 1;
	bool isMeasurementProblem = 2;
	int32 returnCode = 3;

	google.protobuf.Timestamp registeredAt = 4;
	string rtuTitle = 5;
	string rtuId = 6;
	string traceTitle = 7;
	string traceId = 8;
	ft.enums.BaseRefType baseRefType = 9;

	string comment = 10;
	int32 clearedAccidentWithId = 11; 
}


